Add services key, rename service fields
